--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 
 <HTML>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <head>
         <title>GAET ET ORD Browser Version 0.1</title>
         <!--Stylesheets-->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles/style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         
         <!--Font Awesome-->
@@ -14,7 +15,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         
         <!--Main Javascript-->
-        <script src="main.js"></script>
+        <script src="scripts/main.js"></script>
 
     </head>
 <body>
