Progress bar timer added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
         <div id="card3"></div>
         <div id="card4"></div>
     </div>
-    <div id="thingsToDo"></div><div id="timer"></div><button type="submit" id="startTime" class="btn btn-default btn-success btn-block" disabled>Er du klar? Start Tiden!</button></div>
+    <div id="thingsToDo"></div>
+    <div id="timeCointainer">
+        <div id="timeBar"></div>
+    </div>
+    <button type="submit" id="startTime" class="btn btn-default btn-success btn-block" disabled>Er du klar? Start Tiden!</button></div>
     <div id="board">Board here <i class="fab fa-accessible-icon"></i></div>
 </body>
 </HTML>
