fixed picked card style

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <div id="timeCointainer">
         <div id="timeBar"></div>
     </div>
+    <div id="pointContainer"></div>
     <button type="submit" id="startTime" class="btn btn-default btn-success btn-block" disabled>Er du klar? Start Tiden!</button></div>
     <div id="board">Board here <i class="fab fa-accessible-icon"></i></div>
 </body>
