--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!--jQuery/bootstrap-->
         <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
         
         <!--Main Javascript-->
         <script src="scripts/main.js"></script>
