--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--jQuery/bootstrap-->
         <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-        
+
         <!--Main Javascript-->
         <script src="scripts/main.js"></script>
 
@@ -51,8 +51,14 @@
             </div>
         </div> 
     <div id="resultbox"></div>
+    <div id="topcontainer">
     <div id="turnbox"></div>
-    <div id="infobox"></div>
+    <div id="infobox">Hej</div>
+        <button type="submit" id="startTime" class="btn btn-default btn-success btn-block" disabled>Er du klar? Start Tiden!</button>
+    </div>
+    <div id="timeCointainer">
+        <div id="timeBar"></div>
+    </div>
     <div id="cards">
         <div id="card0"></div>
         <div id="card1"></div>
@@ -61,11 +67,9 @@
         <div id="card4"></div>
     </div>
     <div id="thingsToDo"></div>
-    <div id="timeCointainer">
-        <div id="timeBar"></div>
-    </div>
+
     <div id="pointContainer"></div>
-    <button type="submit" id="startTime" class="btn btn-default btn-success btn-block" disabled>Er du klar? Start Tiden!</button></div>
+    
     <div id="board">Board here <i class="fab fa-accessible-icon"></i></div>
 </body>
 </HTML>
