--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
             </div>
         </div> 
     <div id="resultbox"></div>
-    <div id="topcontainer">
     <div id="turnbox"></div>
-    <div id="infobox">Hej</div>
-        <button type="submit" id="startTime" class="btn btn-default btn-success btn-block" disabled>Er du klar? Start Tiden!</button>
+    <div id="topcontainer">
+    <div id="infobox"></div>
+    <div id="pointContainer"></div>
+        <button type="submit" id="startTime" class="btn btn-default btn-success btn-block">Er du klar? Start Tiden!</button>
+        <button type='submit' id='pointBtn' class='btn btn-default btn-success btn-block'>Videre..</button>
     </div>
     <div id="timeCointainer">
         <div id="timeBar"></div>
@@ -68,7 +70,7 @@
     </div>
     <div id="thingsToDo"></div>
 
-    <div id="pointContainer"></div>
+    
     
     <div id="board">Board here <i class="fab fa-accessible-icon"></i></div>
 </body>
