Input styling bootstrap

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- Modal content-->
             <div class="modal-content">
             <div class="modal-body">Vaelg antal hold:<br>
-                <select id="numberOfTeamsSelected">
+                <select id="numberOfTeamsSelected" class="form-control">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -70,8 +70,5 @@
     </div>
     <div id="thingsToDo"></div>
 
-    
-    
-    <div id="board">Board here <i class="fab fa-accessible-icon"></i></div>
 </body>
 </HTML>
