--- a/index.html
+++ b/index.html
@@ -50,25 +50,20 @@
                 </div>
             </div>
         </div> 
-    <div id="resultbox"></div>
-    <div id="turnbox"></div>
-    <div id="topcontainer">
-    <div id="infobox"></div>
-    <div id="pointContainer"></div>
+
+<div class="grid-container">
+    <div class="scorebox"></div>
+    <div class="header"></div>
+    <div class="infobox"></div>
+    <div class="timepoint">
         <button type="submit" id="startTime" class="btn btn-default btn-success btn-block">Er du klar? Start Tiden!</button>
         <button type='submit' id='pointBtn' class='btn btn-default btn-success btn-block'>Videre..</button>
     </div>
-    <div id="timeCointainer">
-        <div id="timeBar"></div>
-    </div>
-    <div id="cards">
-        <div id="card0"></div>
-        <div id="card1"></div>
-        <div id="card2"></div>
-        <div id="card3"></div>
-        <div id="card4"></div>
-    </div>
-    <div id="thingsToDo"></div>
+    <div class="cards"></div> 
+    <div class="footer"></div>
+    <div class="blank"></div>
+</div>
 
+    
 </body>
 </HTML>
