--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <div class="header"></div>
     <div class="infobox"></div>
     <div class="timepoint">
+        <div id="timeBar"></div>
         <button type="submit" id="startTime" class="btn btn-default btn-success btn-block">Er du klar? Start Tiden!</button>
         <button type='submit' id='pointBtn' class='btn btn-default btn-success btn-block'>Videre..</button>
     </div>
