Some style and DOM manipulation fixes

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 <div class="grid-container">
     <div class="scorebox"></div>
     <div class="header"></div>
-    <div class="infobox"></div>
-    <div class="timepoint">
+    <div class="infobox">
         <div id="timeBar"></div>
         <button type="submit" id="startTime" class="btn btn-default btn-success btn-block">Er du klar? Start Tiden!</button>
         <button type='submit' id='pointBtn' class='btn btn-default btn-success btn-block'>Videre..</button>
