--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 
 <div class="grid-container">
     <div class="scorebox"></div>
-    <div class="header"></div>
+    <div class="header">
+    </div>
     <div class="infobox">
         <div id="timeBar"></div>
         <button type="submit" id="startTime" class="btn btn-default btn-success btn-block">Er du klar? Start Tiden!</button>
